Needs more default user actions in tests